detail of gmaps

--- a/examples/googlemaps-with-angular/index.html
+++ b/examples/googlemaps-with-angular/index.html
@@ -4,13 +4,10 @@
 	<meta charset="UTF-8">
 	<title>NewFour @ test of </title>
     <link rel="stylesheet" href="styles/mystyle.css">
-    <script src="libs/jquery-1.11.3.js"></script>
-    <script src="libs/angular.js"></script>
-
-    <script src="libs/lodash.js"></script>
-    <script src="libs/angular-simple-logger.min.js"></script>
-    <script src="libs/angular-google-maps.js"></script>
-
+    <script src="../../libs/angular.js"></script>
+    <script src="../../libs/lodash.js"></script>
+    <script src="../../libs/angular-simple-logger.min.js"></script>
+    <script src="../../libs/angular-google-maps.js"></script>
 </head>
 <body ng-app="myGMap">
 	<div class="myContainer" ng-controller="myCtrl">
@@ -33,15 +30,11 @@
 											 icon="'icon'"
 											 options="'options'"></ui-gmap-markers>
 
-			<!-- device C markers -->
-			<!-- <ui-gmap-markers></ui-gmap-markers> -->
-
 		</ui-gmap-google-map>
 
 	</div>
-    <script src="js/myApp.js"></script>
-    <!-- <script src="js/myServices.js"></script> -->
-    <!-- <script src="js/myDirectives.js"></script> -->
-    <script src="js/myController.js"></script>
+
+  <script src="js/myApp.js"></script>
+  <script src="js/myController.js"></script>
 </body>
 </html>
